objects/Case.object
<CustomObject>
    <fields>
        <fullName>Import_FQ_ID__c</fullName>
        <label>Import FQ ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Protocol_Development_Queue_Date__c</fullName>
        <label>In Protocol Development Queue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Includes_Dataset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Dataset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Library__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KOL_Detail__c</fullName>
        <label>KOL Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KOL_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KOL Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Librarian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Librarian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Librarian_Lead__c</fullName>
        <label>Librarian Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heidi Tibollo</fullName>
                </value>
                <value>
                    <fullName>Mary Carpenter</fullName>
                </value>
                <value>
                    <fullName>Maura Sostack</fullName>
                </value>
                <value>
                    <fullName>Melinda Davies</fullName>
                </value>
                <value>
                    <fullName>Nancy Firchow</fullName>
                </value>
                <value>
                    <fullName>Rienne Schinner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Library_Asset_Type__c</fullName>
        <label>Library Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Renovation</fullName>
                </value>
                <value>
                    <fullName>Medium Renovation</fullName>
                </value>
                <value>
                    <fullName>High Renovation/De Novo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Library_Complete_Date__c</fullName>
        <label>Library Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Library_Package_Name__c</fullName>
        <label>Library Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Start_Date__c</fullName>
        <label>Library Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meth_Rep_1__c</fullName>
        <label>Meth Rep #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Clausel</fullName>
                </value>
                <value>
                    <fullName>Ambar Grijalva</fullName>
                </value>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Bobby Milam</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Dara Paek</fullName>
                </value>
                <value>
                    <fullName>Erin Murray</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>John Gilles</fullName>
                </value>
                <value>
                    <fullName>Lauren Mintzer</fullName>
                </value>
                <value>
                    <fullName>Madison Zhang</fullName>
                </value>
                <value>
                    <fullName>Rebecca Diekemper</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
                <value>
                    <fullName>Sharath Krishna</fullName>
                </value>
                <value>
                    <fullName>Sonya Egodadge</fullName>
                </value>
                <value>
                    <fullName>Sophie Yoon</fullName>
                </value>
                <value>
                    <fullName>Yi Xu</fullName>
                </value>
                <value>
                    <fullName>Yuting Kuang</fullName>
                </value>
                <value>
                    <fullName>Zuleika Aponte</fullName>
                </value>
                <value>
                    <fullName>Maria Akopjan</fullName>
                </value>
                <value>
                    <fullName>Arielle Levy</fullName>
                    <isActive>false</isActive>
                    <label>Arielle Levy</label>
                </value>
                <value>
                    <fullName>Jacob Franek</fullName>
                    <isActive>false</isActive>
                    <label>Jacob Franek</label>
                </value>
                <value>
                    <fullName>Jerrin Thomas</fullName>
                    <isActive>false</isActive>
                    <label>Jerrin Thomas</label>
                </value>
                <value>
                    <fullName>Laura Mitchell</fullName>
                    <isActive>false</isActive>
                    <label>Laura Mitchell</label>
                </value>
                <value>
                    <fullName>Nilay Patel</fullName>
                    <isActive>false</isActive>
                    <label>Nilay Patel</label>
                </value>
                <value>
                    <fullName>Rachel Hughes</fullName>
                    <isActive>false</isActive>
                    <label>Rachel Hughes</label>
                </value>
                <value>
                    <fullName>Shauna Ekimura</fullName>
                    <isActive>false</isActive>
                    <label>Shauna Ekimura</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meth_Rep_2__c</fullName>
        <label>Meth Rep #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Clausel</fullName>
                </value>
                <value>
                    <fullName>Ambar Grijalva</fullName>
                </value>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Bobby Milam</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Dara Paek</fullName>
                </value>
                <value>
                    <fullName>Erin Murray</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>John Gilles</fullName>
                </value>
                <value>
                    <fullName>Lauren Mintzer</fullName>
                </value>
                <value>
                    <fullName>Madison Zhang</fullName>
                </value>
                <value>
                    <fullName>Rebecca Diekemper</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
                <value>
                    <fullName>Sharath Krishna</fullName>
                </value>
                <value>
                    <fullName>Sonya Egodadge</fullName>
                </value>
                <value>
                    <fullName>Sophie Yoon</fullName>
                </value>
                <value>
                    <fullName>Yi Xu</fullName>
                </value>
                <value>
                    <fullName>Yuting Kuang</fullName>
                </value>
                <value>
                    <fullName>Zuleika Aponte</fullName>
                </value>
                <value>
                    <fullName>Maria Akopjan</fullName>
                </value>
                <value>
                    <fullName>Arielle Levy</fullName>
                    <isActive>false</isActive>
                    <label>Arielle Levy</label>
                </value>
                <value>
                    <fullName>Jacob Franek</fullName>
                    <isActive>false</isActive>
                    <label>Jacob Franek</label>
                </value>
                <value>
                    <fullName>Jerrin Thomas</fullName>
                    <isActive>false</isActive>
                    <label>Jerrin Thomas</label>
                </value>
                <value>
                    <fullName>Laura Mitchell</fullName>
                    <isActive>false</isActive>
                    <label>Laura Mitchell</label>
                </value>
                <value>
                    <fullName>Nilay Patel</fullName>
                    <isActive>false</isActive>
                    <label>Nilay Patel</label>
                </value>
                <value>
                    <fullName>Rachel Hughes</fullName>
                    <isActive>false</isActive>
                    <label>Rachel Hughes</label>
                </value>
                <value>
                    <fullName>Shauna Ekimura</fullName>
                    <isActive>false</isActive>
                    <label>Shauna Ekimura</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meth_Rep_3__c</fullName>
        <label>Meth Rep #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Clausel</fullName>
                </value>
                <value>
                    <fullName>Ambar Grijalva</fullName>
                </value>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Bobby Milam</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Dara Paek</fullName>
                </value>
                <value>
                    <fullName>Erin Murray</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>John Gilles</fullName>
                </value>
                <value>
                    <fullName>Lauren Mintzer</fullName>
                </value>
                <value>
                    <fullName>Madison Zhang</fullName>
                </value>
                <value>
                    <fullName>Rebecca Diekemper</fullName>
                </value>
                <value>
                    <fullName>Sharath Krishna</fullName>
                </value>
                <value>
                    <fullName>Sonya Egodadge</fullName>
                </value>
                <value>
                    <fullName>Sophie Yoon</fullName>
                </value>
                <value>
                    <fullName>Yuting Kuang</fullName>
                </value>
                <value>
                    <fullName>Zuleika Aponte</fullName>
                </value>
                <value>
                    <fullName>Maria Akopjan</fullName>
                </value>
                <value>
                    <fullName>Arielle Levy</fullName>
                    <isActive>false</isActive>
                    <label>Arielle Levy</label>
                </value>
                <value>
                    <fullName>Jerrin Thomas</fullName>
                    <isActive>false</isActive>
                    <label>Jerrin Thomas</label>
                </value>
                <value>
                    <fullName>Rachel Hughes</fullName>
                    <isActive>false</isActive>
                    <label>Rachel Hughes</label>
                </value>
                <value>
                    <fullName>Shauna Ekimura</fullName>
                    <isActive>false</isActive>
                    <label>Shauna Ekimura</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methodology_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Methodology Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Methodology_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Methodology Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Methodology_Question_Type__c</fullName>
        <label>Methodology Question Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animal / Pre-clinical / Pathophysiological</fullName>
                </value>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Efficacy / Effectiveness / Safety, Comparative</fullName>
                </value>
                <value>
                    <fullName>Efficacy / Effectiveness / Safety, Non-Comparative</fullName>
                </value>
                <value>
                    <fullName>Epidemiology</fullName>
                </value>
                <value>
                    <fullName>Health Services Delivery</fullName>
                </value>
                <value>
                    <fullName>Humanistic Burden</fullName>
                </value>
                <value>
                    <fullName>Prognosis</fullName>
                </value>
                <value>
                    <fullName>Unclear/Need More Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Hours_Reported__c</fullName>
        <label>Number of Hours Reported</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <formula>TEXT(Opportunity_Name__r.Product_Category__c)</formula>
        <label>Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ontology_Complete_Date__c</fullName>
        <label>Ontology Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ontology_Lead__c</fullName>
        <label>Ontology Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Augusta Crumrine</fullName>
                </value>
                <value>
                    <fullName>ChunYi Ho</fullName>
                </value>
                <value>
                    <fullName>Joseph Tsung</fullName>
                </value>
                <value>
                    <fullName>Lauren Mintzer</fullName>
                </value>
                <value>
                    <fullName>Rui Zou</fullName>
                </value>
                <value>
                    <fullName>Sara del Aguila</fullName>
                </value>
                <value>
                    <fullName>Tammy Quach</fullName>
                </value>
                <value>
                    <fullName>Alicia Clausel</fullName>
                    <isActive>false</isActive>
                    <label>Alicia Clausel</label>
                </value>
                <value>
                    <fullName>Marina Gettas</fullName>
                    <isActive>false</isActive>
                    <label>Marina Gettas</label>
                </value>
                <value>
                    <fullName>Purnima Gurung</fullName>
                    <isActive>false</isActive>
                    <label>Purnima Gurung</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ontology_Start_Date__c</fullName>
        <label>Ontology Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operations_Deliverable__c</fullName>
        <label>Operations Deliverable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term Index</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Other/Custom</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity_Name__r.Opportunity_ID__c</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PICO_ID__c</fullName>
        <externalId>true</externalId>
        <label>PICO ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <label>Package ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record to represent the parent project.</description>
        <label>Parent Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Scientist__c</fullName>
        <label>Principal Scientist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Egbe Ubamadu</fullName>
                </value>
                <value>
                    <fullName>Erin Murray</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>Madison Zhang</fullName>
                </value>
                <value>
                    <fullName>Rebecca Diekemper</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
                <value>
                    <fullName>Sophie Yoon</fullName>
                </value>
                <value>
                    <fullName>Jacob Franek</fullName>
                    <isActive>false</isActive>
                    <label>Jacob Franek</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Phase__c</fullName>
        <label>Process Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Early Scoping</fullName>
                </value>
                <value>
                    <fullName>2 - Protocol Development</fullName>
                </value>
                <value>
                    <fullName>3 - Library Estimating</fullName>
                </value>
                <value>
                    <fullName>4 - Library Production</fullName>
                </value>
                <value>
                    <fullName>5 - In Active Production</fullName>
                </value>
                <value>
                    <fullName>6 - Delivered</fullName>
                </value>
                <value>
                    <fullName>7 - Delivered + Routine Updating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Release_Date__c</fullName>
        <label>Production Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Instruction_Completed_Date__c</fullName>
        <label>Project Instruction Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Instruction_Start_Date__c</fullName>
        <label>Project Instruction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Approved_by_Client__c</fullName>
        <label>Project Plan Approved by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Stage_Ops__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protocol Development Queue</fullName>
                </value>
                <value>
                    <fullName>Protocol Development</fullName>
                </value>
                <value>
                    <fullName>Library Queue</fullName>
                </value>
                <value>
                    <fullName>Library Production</fullName>
                </value>
                <value>
                    <fullName>Pre-Production</fullName>
                </value>
                <value>
                    <fullName>Configuration Queue</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Ontology</fullName>
                </value>
                <value>
                    <fullName>Custom Deliverables</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>Delivered to CS</fullName>
                    <isActive>false</isActive>
                    <label>Delivered to CS</label>
                </value>
                <value>
                    <fullName>Rapid Intel</fullName>
                    <isActive>false</isActive>
                    <label>Rapid Intel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Development_Complete_Date__c</fullName>
        <label>Protocol Development Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Protocol_Development_Start_Date__c</fullName>
        <label>Protocol Development Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Client_Full_Text_Screen__c</fullName>
        <label>Requires Client Full-Text Screen?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrieved_Studies_and_DeDuped__c</fullName>
        <label># Retrieved and De-Duped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoping_Start_Date__c</fullName>
        <label>Scoping Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Project_Plan_to_Client_for_R_A__c</fullName>
        <label>Send Project Plan to Client for R&amp;A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Development_of_Project_Plan__c</fullName>
        <label>Start Development of Project Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Requirements_Detail__c</fullName>
        <label>Technology Requirements Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technology_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Discussion Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <formula>TEXT(Opportunity_Name__r.Therapeutic_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapeutic Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ti_ab_Library_Deadline__c</fullName>
        <label>Ti/ab Library Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Group__c</fullName>
        <label>Working Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Archaogen BD Strategy</fullName>
                </value>
                <value>
                    <fullName>Asthma Trial Strategy</fullName>
                </value>
                <value>
                    <fullName>Canada Medical Information</fullName>
                </value>
                <value>
                    <fullName>CHC Allergies</fullName>
                </value>
                <value>
                    <fullName>CHC Canada Strategy</fullName>
                </value>
                <value>
                    <fullName>CHC Claims Week</fullName>
                </value>
                <value>
                    <fullName>CHC Heartburn</fullName>
                </value>
                <value>
                    <fullName>CHC Laxatives</fullName>
                </value>
                <value>
                    <fullName>CHC OTC Switch</fullName>
                </value>
                <value>
                    <fullName>CHC Probiotics</fullName>
                </value>
                <value>
                    <fullName>CHC South Africa Strategy</fullName>
                </value>
                <value>
                    <fullName>CHC Vitamins</fullName>
                </value>
                <value>
                    <fullName>Clopidogrel Publications</fullName>
                </value>
                <value>
                    <fullName>COPD Trial Strategy</fullName>
                </value>
                <value>
                    <fullName>Diabetes Algeria Strategy</fullName>
                </value>
                <value>
                    <fullName>Diabetes China Strategy</fullName>
                </value>
                <value>
                    <fullName>Diabetes Literature Updates</fullName>
                </value>
                <value>
                    <fullName>Diabetes RWE Modeling</fullName>
                </value>
                <value>
                    <fullName>Dupilumab HTA Submissions</fullName>
                </value>
                <value>
                    <fullName>Dupilumab Strategy</fullName>
                </value>
                <value>
                    <fullName>Eligard Canada Strategy</fullName>
                </value>
                <value>
                    <fullName>Enoxaparin Publications</fullName>
                </value>
                <value>
                    <fullName>GEM Literature Updates</fullName>
                </value>
                <value>
                    <fullName>Genzyme Library</fullName>
                </value>
                <value>
                    <fullName>Glargine Cancer Risk</fullName>
                </value>
                <value>
                    <fullName>HEVA HTA Submissions</fullName>
                </value>
                <value>
                    <fullName>HEVA Hypoglycemia Strategy</fullName>
                </value>
                <value>
                    <fullName>HEVA Obesity Strategy</fullName>
                </value>
                <value>
                    <fullName>HEVA Soliqua Strategy</fullName>
                </value>
                <value>
                    <fullName>Hypoglycemia South Africa Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Assigned_Library_Studies__c</fullName>
        <label># of Assigned Library Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PICO_ID__c</columns>
        <columns>Case_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Database_Name__c</columns>
        <columns>Parent_Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Sanofi</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Card2</fullName>
        <columns>PICO_ID__c</columns>
        <columns>Deliverable_Deadline_Date__c</columns>
        <columns>Working_Group__c</columns>
        <columns>Case_Name__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>sanofi</value>
        </filters>
        <filters>
            <field>PICO_ID__c</field>
            <operation>contains</operation>
            <value>card</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Card</label>
    </listViews>
</CustomObject>